Trabajo Víctor Algarín 02-12-2013

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
@@ -106,4 +106,24 @@ fecha=Date
 diagnosticos=Diagnosis
 fechanotificacion=Notification Date
 #Exportar
-reportada=Reported
+tipoE=Type
+claseE=Class
+causaE=Cause
+diasE=Days
+horasE=Hours
+iausenciaE=Starting_Date
+fausenciaE=Ending_Date
+expedicionE=Expedition
+ipagoE=Payment_Start
+fpagoE=Payment_Ending
+bliquidacionE=Liquidation_Base
+fliquidacionE=Liquidation_Method
+atE=AD
+epE=SD
+numeroE=Certificate
+cdiagnosticoE=Diagnosis_Code
+prorrogaE=Extention
+periodoE=Period
+reportadaE=Reported
+terceroE=Supplier
+observacionesE=Observations
