--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
@@ -31,7 +31,7 @@ cancelar=Cancel
 atencion=WARNING...!
 aceptar=Accept
 atras=Back
-validacionNuevo= To insert a new novelty it's necessary to add:
+validacionNuevo= To insert a new absenteeism it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
