Trabajo Victor Algarín 12/12/2013

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
@@ -79,6 +79,8 @@ ingresarnuevo= Add new Absenteeism
 modulo=OCCUPATIONAL HEALTH MODULE
 accident=Accident
 enf=Sickness
+#DuplicarRegistro
+duplicarregistro= Duplicate Entry
 #RASTRO
 confirmarRastro=The table 'SOAUSENTISMOS' has traces for the selected entry, do you wish to continue?
 confirmarRastroHistorico=The table 'SOAUSENTISMOS' has historic traces,do you wish to continue?
