--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
@@ -37,6 +37,8 @@ refrescar= Refresh
 #NuevoRegistro
 nuevoregistro= New Entry
 ingresarnuevo= Add new city
+#DuplicarRegistro
+duplicarregistro= Duplicate City
 #LovDepartamento
 departamentoN= State name
 #Validacion
