--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta_en.properties
@@ -93,6 +93,8 @@ consolidanitempresaN=Consolidates company N.I.T:
 shortnameN=Short Name: 
 cuentasapN=SAP Account: 
 subcuentaN=Sub-Account: 
+#DuplicarRegistro
+duplicarregistro= Duplicate Entry
 #Naturaleza items
 debito=DEBIT
 credito=CREDIT
