--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplinformacionadicional_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplinformacionadicional_en.properties
@@ -62,6 +62,8 @@ caracterN=Character:
 numericoN=Numeric: 
 fechaN=Date: 
 observacionN=Observation: 
+#DuplicarRegistro
+duplicarregistro= Duplicate Entry
 #Variables de tipo
 c=CHARACTER
 f=DATE
