--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado_en.properties
@@ -37,6 +37,7 @@ todas=All novelties
 actuales= Current novelties
 refrescar= Refresh
 nuevoregistro= New entry
+duplicarregistro= Duplicate Entry
 ingresarnueva= Add a new novelty
 limpiar= Clean
 agregar= Add
