--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto_en.properties
@@ -88,7 +88,7 @@ estadoo=State:
 enviara=Send to Treasury:
 codigoalternativoo=Alternative Code:
 #Duplicar
-duplicarconcepto=Duplicar Concepto
+duplicarconcepto=Duplicate Wage Type
 #LOVUNIDADES
 unidades=Units
 buscarunidad=Search unit:
