--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -1,7 +1,7 @@
 #Titulo y Fieldsets
 titulo=Human Resources Sistem - Main - Designer Software
 tipopersonal=Personnel Type
-personalactivo=Active Personnel
+informacionpersonal=Personal Information
 informacionlaboral=Work Information
 #TABS
 personal=Personnel
