HUGOSIN CAMBIOS PC ANDRES 23-12-2013 EJB

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador_en.properties
@@ -112,3 +112,5 @@ validacionNuevo= To insert a new Effective Worker Type it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+buscarM=Search Retirement Motive
+errorFechaVTT=The effective date can not be empty
