--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -232,3 +232,10 @@ empleadosE=Employees
 #Buscar y mostrar
 Buscar=Search Employee...
 mostrar=Show All
+toolTipNovedades1=Report all payments and discounts
+toolTipNovedades2=that are not automatic settlement.
+toolTipConcepto1=Settlement and accounting properties
+toolTipConcepto2=of each payroll concept. (Resume of the concept)
+toolTipFormulas=
+toolTipLegislacion1=
+toolTipLegislacion=
