--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra_en.properties
@@ -1,6 +1,7 @@
 #Arriba
 titulo=Generate Settlement
 progreso=Settlement Progress
+indicadores=Indicators
 ttal=Total of employees to settle: 
 ttl=Total of employees settled: 
 hil=Settlement starting hour:
@@ -46,3 +47,4 @@ liquidacionesPrenomina=Pre payroll settlements
 codigoempresaE=Company_Code
 codigoempresa=Company Code
 observacionE=Observation
+sinregistro=No Entries
