--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
@@ -55,3 +55,8 @@ errorObjetosDB=The table 'CIUDADES' hasn't been found ObjetosDB. Please get in t
 #Exportar
 codigoAlternativo=Alternative_Code
 noombre=Name
+departamentos=States
+codigoN=Code: 
+nombreN=City Name: 
+departamentooN=State: 
+codigoalternativoN=Alternative Code: 
