--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado_en.properties
@@ -52,7 +52,7 @@ fecha=The initial date of a novelty can't be lower than it's own end date.
 descripcion=Description
 sFormulas=The table SOLUCIONES FORMULAS has this entry, it can't be deleted.
 cambio=There are some unsaved changes, do you want to save them?
-
+#Rastro
 confirmarRastro=The table 'NOVEDADES' has traces for the selected entry, do you wish to continue?
 confirmarRastroHistorico=The table 'NOVEDADES' has historic traces,do you wish to continue?
 errorRastroHistorico=The table has no historic traces.
