--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -239,3 +239,6 @@ toolTipConcepto2=of each payroll concept. (Resume of the concept)
 toolTipFormulas=
 toolTipLegislacion1=
 toolTipLegislacion=
+buscarTabla=Search table
+mostrarTodos=Show all
+buscarT=Buscar tabla: 
