--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta_en.properties
@@ -138,3 +138,5 @@ cuentaasociada=SAP Linked Account
 manejasubcuenta=Handles Sub Account
 cuentaasociadaX=SAP_Linked_Account
 manejasubcuentaX=Handles_Sub_Account
+ccX=C.C.
+iccX=I.C.C.
