--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador_en.properties
@@ -114,3 +114,5 @@ cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 buscarM=Search Retirement Motive
 errorFechaVTT=The effective date can not be empty
+errorRegRetiro=The Retirement Date field is empty and/or the observation has over 500 characters
+errorRegPensionado=The Initial Date field is empty and/or Pension Class field is empty\n
