--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -236,6 +236,6 @@ toolTipNovedades1=Report all payments and discounts
 toolTipNovedades2=that are not automatic settlement.
 toolTipConcepto1=Settlement and accounting properties
 toolTipConcepto2=of each payroll concept. (Resume of the concept)
-toolTipFormulas=
-toolTipLegislacion1=
-toolTipLegislacion=
+toolTipFormulas=Operands,operators and formulas management
+toolTipLegislacion1=Country properties, collective agreement
+toolTipLegislacion=or collective agreement of each company.
