--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra_en.properties
@@ -48,3 +48,18 @@ codigoempresaE=Company_Code
 codigoempresa=Company Code
 observacionE=Observation
 sinregistro=No Entries
+#Otros
+vacio=No results were found for this search 
+lovvacio=No results containing the search criteria were found
+si=Yes
+no=No
+limpiar=Clean
+agregar=Add
+cancelar=Cancel
+atencion=WARNING...!
+aceptar=Accept
+atras=Back
+validacionNuevo= To insert a new absenteeism it's necessary to add:
+cambiosRealizados=Do you want to save changes?
+cambio=There are some unsaved changes, do you want to save them?
+refrescar= Refresh
