--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadconcepto_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadconcepto_en.properties
@@ -1,5 +1,5 @@
 #Titulo,botones y Fieldsets
-titulo=Permanent and occasional novelties by employee
+titulo=Permanent and occasional novelties by concepts
 conceptos=Concepts
 cpd=Payment and/or discount concepts
 buscar=Search Concept
