--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano_en.properties
@@ -77,48 +77,50 @@ errorExtencionArchivo=Invalid file extension, only files with the .prn extension
 documentoNoExiste=The name of the support document entered, doesn't exist. Check case sensitive.
 reversarFallo=The novelties weren't reversed,because there are settled novelties.
 exito=Success
-nre=Novedades Reversadas con \u00e9xito
+nre=Novelties successfully reversed
 #ACA VOY
-registrosreversados=Registros Reversados (
-reversarDialogo=Atenci\u00f3n - Reversar Novedades
-documentosoporte=Doc. Soporte:  
-confirmacion=Confirmaci\u00f3n
-confirmarReversar=Va a reversar el carge de novedades con el Documento Soporte : 
-continuar=Continuar
-bvc=Atenci\u00f3n - Borrar varios cargues 
-documentosSoporte=Documentos Soporte
-cpb=Cargues Para Borrar
-borrarseleccionados=Borrar Seleccionados
-novedadesborradasconexito=Novedades Borradas con \u00c9xito
-registrosborrados=Registros Borrados (
-erroresdelanovedad=Errores de la Novedad
-erroresBorrarTodo=No se pudo borrar los registros de los siguientes documentos soporte: 
-yaqueexisten=Ya que existen novedades liquidadas de los mismos.
-losdemasdocumentos=Los Demas Documentos Soporte(Si lo hay), fueron borrados exitosamente.
-borrartodo=[Borrar Todo]
-borrarnocargado=[Borrar No Cargado]
-novedadplanoocasional=[Novedad Plano Ocasional]
+registrosreversados=Reversed Entries (
+reversarDialogo=Warning - Reverse Novelties
+documentosoporte=Support Doc.:  
+confirmacion=Confirmation
+confirmarReversar=You're going to check novelties loading with the Support Document: 
+continuar=Continue
+bvc=Warning - Erase various loads
+documentosSoporte=Support Documents
+cpb=Loads to erase
+borrarseleccionados=Delete Selected
+novedadesborradasconexito=Novelties successfully erased
+registrosborrados=Erased Entries (
+erroresdelanovedad=Novelty Errors
+erroresBorrarTodo=Entries on the following support documents couldn't be erased: 
+yaqueexisten=Since there's already settled novelties of these documents.
+losdemasdocumentos=Others (if there are), were successfully erased.
+borrartodo=[Erase All]
+borrarnocargado=[Erase Not Loaded]
+novedadplanoocasional=[Ocassional Flat Novelty]
 #LOV Formulas
 formulasF=Formulas
-buscarF=Buscar Formula: 
-nombrecortoF=Nombre Corto
-nombrelargoF=Nombre Largo
+buscarF=Search Formula: 
+nombrecortoF=Short Name
+nombrelargoF=Long Name
 #LOV DOCUMENTOS SOPORTE
-documentosDS=Documentos Soporte
-buscarDS=Buscar Documento: 
-nombreDS=Nombre
+documentosDS=Support Documents
+buscarDS=Search Document: 
+nombreDS=Name
 #Otros
-vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
-lovvacio=No se encontraron resultados con el criterio de busqueda.
-si=Si
+vacio=No results were found for this search 
+lovvacio=No results containing the search criteria were found
+si=Yes
 no=No
-limpiar=Limpiar
-agregar=Agregar
-cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
-aceptar=Aceptar
-atras=Atras
-validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
-cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+limpiar=Clean
+agregar=Add
+cancelar=Cancel
+atencion=WARNING...!
+aceptar=Accept
+atras=Back
+validacionNuevo= To insert a new novelty it's necessary to add:
+cambiosRealizados=Do you want to save changes?
+cambio=There are some unsaved changes, do you want to save them?
+refrescar= Refresh
+errores=ERRORS: 
+reversarcarguenovedades=Reverse Novelties Loading
