--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -236,9 +236,9 @@ toolTipNovedades1=Report all payments and discounts
 toolTipNovedades2=that are not automatic settlement.
 toolTipConcepto1=Settlement and accounting properties
 toolTipConcepto2=of each payroll concept. (Resume of the concept)
-toolTipFormulas=
-toolTipLegislacion1=
-toolTipLegislacion=
-buscarTabla=Search table
-mostrarTodos=Show all
-buscarT=Buscar tabla: 
+toolTipFormulas=Operands, operators and formulas Management
+toolTipLegislacion1=Owned by each country, collective agreement
+toolTipLegislacion=or collective agreement of each company.
+buscarTabla=Search Table
+mostrarTodos=Show All
+buscarT=Search Table: 
