Felipphe 30-12-2013  !Feliz Año Nuevo! =)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -242,3 +242,9 @@ toolTipLegislacion=
 buscarTabla=Search table
 mostrarTodos=Show all
 buscarT=Buscar tabla: 
+codigoX=Code
+primerApellidoX=First last name
+primerApellidoXX=First_last_name
+segundoApellidoX=Second last name
+segundoApellidoXX=Second_last_name
+nombreX=Name
