--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -236,9 +236,9 @@ toolTipNovedades1=Report all payments and discounts
 toolTipNovedades2=that are not automatic settlement.
 toolTipConcepto1=Settlement and accounting properties
 toolTipConcepto2=of each payroll concept. (Resume of the concept)
-toolTipFormulas=
-toolTipLegislacion1=
-toolTipLegislacion=
+toolTipFormulas=Operand, operatos and formulas management
+toolTipLegislacion1=Owned by each country, collective agreement
+toolTipLegislacion2=or collective agreement of each company.
 buscarTabla=Search table
 mostrarTodos=Show all
 buscarT=Buscar tabla: 
