--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion_en.properties
@@ -80,3 +80,4 @@ validacionNuevo= To insert a new contract it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+detalle=Detail of the formula associated to the selected law
