--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplinformacionadicional_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplinformacionadicional_en.properties
@@ -82,3 +82,5 @@ inicialXX=Initial Date
 finalXX=Final Date
 finalX=Final_Date
 tipodatoX=Data_Type
+errorRegNew=The fields Initial Date-End Date-Data Type are obligatory
+errorFechas=The initial date is less than 01/01/1900 and/or the end date is bigger than initial date.
