--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs_en.properties
@@ -119,3 +119,7 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'MVRS' hasn't been found ObjetosDB. Please get in touch with support
+errorRegNewMvr=The fields Initial Date-Motives are obligarity.
+errorFechas=The initial date is null and/or the end date is less than initial date.
+errorRegNewOtro=The fields Initial Date-End Date-State-Other Certificates are obligatory.
+errorFechasOC=The initial date is less than end date.
