--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid_en.properties
@@ -73,3 +73,5 @@ validacionNuevo= To insert a new IBC it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+errorRegNew=The fields Initial Date-Value are obligatory.
+errorFechas=The initial date is null and/or the end date is less than initial date.
