--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaevento_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaevento_en.properties
@@ -86,3 +86,5 @@ puntajeind=Ind. Score
 pciNN=Qualitative Individial Scr.
 puntajegrupalNN=Group Score
 pcgNN=Qualitative Group Scr.
+errorRegNew=The fields Initial Date and Event are obligatory.
+errorFechas=The initial date is less than 01/01/1900 and/or the end date is bigger than initial date.
