--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets_en.properties
@@ -72,3 +72,5 @@ tiposetXX=Type_of_SET
 tiposetX=Type of SET
 totalingresosXX=Total_Income
 totalingresosX=Total Income
+errorFechas=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
+errorRegNew=The fields Initial Date-Average-Typo of SET are obligatory and/or the Average is less than zero and/or the Type of SET is different than 1 or 2.
