--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3_en.properties
@@ -101,3 +101,4 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'VIGENCIASAFILIACIONES' hasn't been found ObjetosDB. Please get in touch with support
+errorFechas=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
