--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada_en.properties
@@ -84,7 +84,7 @@ gdt=Do you wish to save the changes made on Rest Taken as Time?
 #Negacion Borrado VJ
 nbvj=To erase the entry on Employee's Working Day it's NECESSARY that the table Rest taken as Money and Rest taken as money to be empty.
 #Negacion Nueva VJ
-nnvj=It's necessary to add the EFFECTIVE DATE to store the new entry.
+nnvj=The fields EFFECTIVE DATE-WORKING DAY are obligatory.
 #EXPORTAR
 fechaXX=Effective_Date
 jornadaX=Working Day
@@ -118,3 +118,4 @@ validacionNuevo= To insert a new working day it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+errorFechas=The Effective Date is less than 01/01/1900.
