--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral_en.properties
@@ -60,3 +60,5 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'VIGENCIASREFORMASLABORALES' hasn't been found ObjetosDB. Please get in touch with support
+errorRegNew=The fields Effective Date-Labor Reform are obligatory.
+errorFechas=The effective date is less than 01/01/1900.
