Victor Algarin 10/1/2014 >>WAR

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf_en.properties
@@ -70,13 +70,13 @@ tipotrabajador=Worker Type
 legislacionlaboral=Labour Law   
 jornada=Journey
 menorvalorretencion=Low Retention Value
-vacaciones=Vacations (Consultation only)
+vacaciones=Vacations (Read only)
 sueldo=Salary
 tiposalario=Salary Type(Labor Reform)
 ubicaciongeografica=Geographic Location
 formadepago=Payment Method
 set=S.E.T
-comprobantesdepago=Receipts (Consultation Only)
+comprobantesdepago=Receipts (Read Only)
 #Botones del panel Central
 #El primero es cargo desempe\u00f1ado, como el de la imagen
 FechaContratacion1=CONTRACT TYPES: Watch and/or add all of the contract
