--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion_en.properties
@@ -113,7 +113,7 @@ guardarCambiosVigenciaProrrateo=Do you want to save the changes made on Apportio
 guardarCambiosVigenciaProrrateoProyecto=Do you want to save the changes made on Apportionment by Cost Center?
 negacionNuevoRegistroVPP=To add a new Apportionment By Proyect entry it's necessary that one or more entries exists on Apportionment by Cost Center
 negacionBorradoVL= To erase the Locations entry is NECESSARY that the Apportionment By Cost Center and Apportionment By Proyect tables to be empty
-negacionNuevaVL=It's necessary to add the CURRENCY DATE to add the new entry.
+negacionNuevaVL=The fields Currency Date-Motive-Location are olbigatory.
 #EXPORTAR
 fechavigenciaX=Effective Date
 fechavigenciaXX=Effective_Date
@@ -154,3 +154,6 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table hasn't been found ObjetosDB. Please get in touch with support
+errorFecha=The currency date is less than  01/01/1900.
+errorRegNewVP=The fields Initial Date-Percentage-Cost Center are obligatory.
+errorFechas=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
