--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad_en.properties
@@ -78,9 +78,9 @@ cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 #Tipos
-acrobat=Acrobat
-html=HTML
-xml=XML
-excel=EXCEL
-hojaelectronica=Spreadsheet
-plano=Flat
+pdf=PDF
+xhtml=XHTML
+xls=XLS
+xlsx=XLSX
+csv=CSV
+txt=TXT
