--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal_en.properties
@@ -163,9 +163,9 @@ cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 #Tipos
-acrobat=Acrobat
-html=HTML
-xml=XML
-excel=EXCEL
-hojaelectronica=Spreadsheet
-rtf=RTF
+pdf=PDF
+xhtml=XHTML
+xls=XLS
+xlsx=XLSX
+csv=CSV
+docx=DOCX
