--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/condicionambientalpeligrosa_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/condicionambientalpeligrosa_en.properties
@@ -45,3 +45,18 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'SOCONDICIONESAMBIENTALESP' hasn't been found ObjetosDB. Please get in touch with support
+#Otros
+vacio=No results were found for this search 
+lovvacio=No results containing the search criteria were found
+si=Yes
+no=No
+limpiar=Clean
+agregar=Add
+cancelar=Cancel
+atencion=WARNING...!
+aceptar=Accept
+atras=Back
+validacionNuevo= To insert a new unsafe act it's necessary to add:
+cambiosRealizados=Do you want to save changes?
+cambio=There are some unsaved changes, do you want to save them?
+refrescar= Refresh
