--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente_en.properties
@@ -72,3 +72,5 @@ duplicarregistroVP=Duplicate Pending Vacations Entry
 #Valores de Estado
 cerrado=CLOSED
 abierto=OPEN
+errorRegNew=The fields Initial Date-End Date-State-Pending Days are obligatory.
+errorFechas=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
