--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo_en.properties
@@ -102,7 +102,7 @@ editarFechaInicialVAD=Effective Affiliations Initial Date
 editarFechaFinalVAD=Effective Affiliations End Date
 #Dialogos Varios
 guardarCambiosVigenciasAfiliaciones=Do you want to save changes made in Effective Affiliations?
-negacionNuevaS= To add a new Entry it's NECESSARY that fields Fecha Vigencia - Valor - Fecha Vigencia Retroactivo have an assigned value.
+negacionNuevaS= The fields Date-Retroactive Validity-Value-Salary Change Motive-Type of Salary are obligatory.
 negacionBorradoVS=To erase an Effective Salary entry it's NECESSARY for Effective Affiliation to be empty.
 #EXPORTAR
 fechavigenciaXX=Effective_Date
@@ -136,3 +136,6 @@ validacionNuevo= To insert a new effectuve salary it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+errorFechasVS=The Date is less than 01/01/1900 and/or the Effective Retroactive is less than 01/01/1900
+errorFechasVA=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
+negacionNuevaVA=The fields Initial Date-Supplier-Type of Entity are obligatory.
