--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador_en.properties
@@ -113,6 +113,7 @@ cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 buscarM=Search Retirement Motive
-errorFechaVTT=The effective date can not be empty
+errorFechaVTT=The effective date is less than 01/01/1900.
 errorRegRetiro=The Retirement Date field is empty and/or the observation has over 500 characters
 errorRegPensionado=The Initial Date field is empty and/or Pension Class field is empty\n
+errorRegNewVTT=The fields Effective Date-Worker Type are obligatory.
