--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar_en.properties
@@ -1,6 +1,6 @@
 #Titulo y Fieldsets - EL TITULO ES UNA VARIABLE PREDEFINIDA EN EL BEAN
 parametros=Parameters
-reportes=Predefined Reports - Payslip
+reportes=Predefined Reports - Welfare
 #Toolbar
 guardar=Save
 editar=Edit
@@ -86,3 +86,5 @@ xls=XLS
 xlsx=XLSX
 csv=CSV
 txt=TXT
+reportesR=Reports
+titulo=Predefined Reports - Welfare
