--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
@@ -136,11 +136,11 @@ asociacionE=Parameterization Association
 reporteAGenerar=Report To Generate
 requisitosReporte=Report Requirements
 #Tipos
-acrobat=Acrobat
-html=HTML
-xml=XML
-excel=EXCEL
-hojaelectronica=Spreadsheet
+pdf=PDF
+xhtml=XHTML
+xls=XLS
+xlsx=XLSX
+csv=CSV
 #Otros
 vacio=No results were found for this search 
 lovvacio=No results containing the search criteria were found
@@ -156,3 +156,4 @@ validacionNuevo= To insert a new report it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+reportesR=Reports
