--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal_en.properties
@@ -1,7 +1,7 @@
 #Titulo y Fieldsets
 titulo=Predefined Reports - Personal Information
 parametros=Parameters
-reportes=Predefined Reports - Payslip
+reportes=Predefined Reports - Personal Information
 #Botones
 mostrar=Show All
 buscar=Search Report
@@ -169,3 +169,4 @@ xls=XLS
 xlsx=XLSX
 csv=CSV
 docx=DOCX
+reportesR=Reports
