--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad_en.properties
@@ -1,7 +1,7 @@
 #Titulo y Fieldsets
 titulo=Payroll Reports
 parametros=Parameters
-reportes=Predefined Reports - Payslip
+reportes=Reports
 #Botones
 envio=Send On E-mail
 #TABLA
@@ -84,3 +84,4 @@ xls=XLS
 xlsx=XLSX
 csv=CSV
 txt=TXT
+reportesR=Reports
