--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos_en.properties
@@ -1,6 +1,6 @@
 titulo=Flat File Generation
 parametros=Parameters
-reportes=Predefined Reports - Payslip
+reportes=Banks
 #Botones
 envio=Send on E-mail
 #TOOLBAR
