--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto_en.properties
@@ -1,2 +1,236 @@
+#Titulo y Fieldsets tooltip del icono
 titulo=Concept Details
 concepto=Concept: 
+hojadevidadelconcepto=Concept Resume
+asignaciondecuentas=Account Assignation
+cuentasytipocc=CC accounts and type
+gruposcontables=Accounting/ Payroll/ Management Group
+tiposdetrabajadores=Worker Types
+tiposdecontratos=Contract Types
+tiposdesalario=Wage Types
+formulas=Formulas
+detallesdelaformulaseleccionada=Chosen Formula Details
+#Cuentas y tipo CC
+fechainicial=Initial Date
+fechafinal=End Date
+tipocc=CC Type
+debito=Debit
+descripcion=Description
+ccconsolidador=Consolidator CC
+credito=Credit
+#Grupos Contables Nomina Gerencial
+codigogrupo=Group Code
+descripciongrupo=Group Description
+#Tipos de Trabajadores
+descripciondeltipodetrabajador=Worker Type Description
+#Tipos de contratos
+descripciondelcontrato=Contract Type Description
+#Tipos de Salarios
+descripciondeltipodesalario=Wage Type Description
+#F\u00f3rmulas
+nombredelaformula=Formula Name
+ordendeliquidacion=Settlement Order
+#Nuevo Registro
+nuevoregistro=New Entry
+seleccionenuevo=Choose the table for which you want to add a new entry
+gruposcontablesNR=Accounting Group
+#Dialogos Error
+errorRegNuevo=None of the fields of the new entry must be empty.
+errorFechasVC=The initial date is less than 01/01/1990 and/or the end date is less than the initial date.
+eliminacionerror=ELIMINATION ERROR
+eliminacion14=ELIMINATION - STEP 1 OF 4
+errorEliminacionConcepto=This concepts has payroll accumulates hence it can't be erased.
+paso1Eliminacion=You're about to eliminate a concept with all of it's associated configuration.
+eliminacion24=ELIMINATION - STEP 2 OF 4
+paso2Eliminacion=Are you completely sure?
+eliminacion34=ELIMINATION - STEP 3 OF 4
+#LOV TIPOS CENTROS COSTOS
+tiposcentroscostosTCC=Cost Center Types
+buscarTCC=Search Cost Center Type: 
+nombreTCC=Name
+#LOV CUENTAS DEBITO
+cuentasdebitoCD=Debit Accounts
+buscarCD=Search Debit Account: 
+codigoCD=Code
+descripcionCD=Description
+#LOV CUENTAS CREDITO
+cuentascreditoCC=Credit Accounts
+buscarCC=Search Credit Account: 
+codigoCC=Code
+descripcionCC=Description
+#LOV CENTRO COSTO CONSOLIDADOR
+centrocostoconsolidadorCCC=Consolidator Cost Center
+buscarCCC=Search Cost Center: 
+codigoCCC=Code
+nombreCCC=Name
+#LOV GRUPOS CONCEPTOS
+gruposconceptosGC=Concept Groups
+buscarGC=Search Concept Group: 
+codigoGC=Code
+descripcionGC=Description
+#LOV TIPOS TRABAJADORES
+tipostrabajadoresTT=Worker Types
+buscarTT=Search Worker Type: 
+nombreTT=Name
+#LOV TIPOS CONTRATOS
+tiposcontratosTC=Contract Types
+buscarTC=Search Contract Type: 
+nombreTC=Name
+#LOV REFORMAS LABORALES
+reformaslaboralesRL=Wage Types
+buscarRL=Search wage type: 
+nombreRL=Name
+#LOV FORMULAS
+formulasF=Formulas
+buscarF=Search Formula: 
+nombreF=Name
+nombrecortoF=Short Name
+#LOV ORDEN DE LIQUIDACI\u00d3N
+ordendeliquidacionOL=Settlement Orders
+buscarOL=Search Order: 
+ordenOL=Order
+descripcionOL=Description
+#Toolbar
+guardar=Save
+editar=Edit
+lista=List of Values
+filtrar=Activate Filter
+xls=Export to XLS
+xml=Export to XML
+pdf=Export to PDF
+nuevo=New Legal Concept
+eliminar=Erase Legal Concept
+duplicar=Duplicate Legal Concept
+rastro=Trace
+#NUEVOS REGISTROS PARA CADA TABLA
+#Nuevo registro Cuentas y tipos cc
+NuevoRegistroVigenciaCuenta=New CC Accounts and Types Entry
+ingresarnuevo=Add new concept Information
+fechainicialN=Initial Date: 
+fechafinalN=End Date: 
+tipoccN=CC Type: 
+tipoccWM=CC Type
+cuentadebitoN=Debit Account: 
+cuentadebitoWM=Debit Account
+descripciondebitoN=Debit Description: 
+descripciondebitoWM=Debit Description
+ccconsolidadorN=Consolidator CC: 
+ccconsolidadorWM=Debit Account Consolidator CC
+cuentacreditoN=Credit Account: 
+cuentacreditoWM=Credit Account
+descripcioncreditoN=Credit Description: 
+descripcioncreditoWM=Credit Description
+ccconsolidadorcuentacreditoN=Consolidator CC: 
+ccconsolidadorcuentacreditoWM=Credit Account Consolidator CC
+#Duplciar registro Cuentas y tipos cc
+DuplicarRegistroVigenciaCuenta=Duplicate CC Accounts and Types Entry
+#Nuevoregistro Grupos Contables/Nomina/Gerencial
+NuevoRegistroGrupoConcepto=New Accounting/Payroll/Management Group Entry
+codigoN=Code: 
+codigoWM=Code
+descripciongrupoN=Code Description: 
+descripciongrupoWM=Code Description
+#Duplicarregistro Grupos Contables/Nomina/Gerencial
+DuplicarRegistroVigenciaGrupoConcepto=Duplicate Accounting/Payroll/Management Group Entry
+#Nuevo Registro - Tipos Trabajadores
+NuevoRegistroVigenciaConceptoTT=New Entry - Worker Types
+ingresarnuevoTT=Add new worker type information
+tipotrabajadorN=Worker Type: 
+tipotrabajadorWM=Worker Type
+#Duplicarregistro - Tipos Trabajadores
+DuplicarRegistroVigenciaConceptoTT=Duplicate Entry - Worker Types
+#Nuevo Registro Tipo Contrato
+NuevoRegistroVigenciaConceptoTC=New Entry - Contract Types
+ingresarnuevoTC=Add new contract type information
+tipocontratoN=Contract Type: 
+tipocontratoWM=Contract Type
+#Duplicar Registro Tipo Contrato
+DuplicarRegistroVigenciaConceptoTC=Duplicate Entry - Worker Type
+#Nuevo Registro Tipo Salario
+NuevoRegistroVigenciaConceptoRL=New Entry - Wage Types
+ingresarnuevoRL=Add new Wage Type
+tiposalarioN=Wage Type: 
+tiposalarioWM=Wage Type
+#Duplicar Registro Tipo Salario
+DuplicarRegistroVigenciaConceptoRL=Duplicate Entry - Wage Types
+#Nuevo Registro Formulas
+NuevoRegistroFormulaConcepto=New Entry - Formulas
+ingresarnuevoF=Add new formula information
+nombreformulaN=Formula Name: 
+nombreformulaWM=Formula Name
+ordenN=Order: 
+ordenWM=Settlement Order
+#Duplicar Registro Formulas
+DuplicarRegistroFormulaConcepto=Duplicate Entry - Formulas
+#Editar
+editarFechaInicialVCD=Initial Date - CC Accounts and Types
+editarFechaFinalVCD=End Daate - CC Accounts and Types
+editarTipoCCVCD=CC Type - CC Accounts and Types
+editaCodDebitoVCD=Debit - CC Accounts and Types
+editaDesDebitoVCD=Description - CC Accounts and Types
+editaCCConsolidadorDVCD=Consolidator CC - CC Accounts and Types
+editaCodCreditoVCD=Credit - CC Accounts and Types
+editaDesCreditoVCD=Description - CC Accounts and Types
+editaCCConsolidadorCVCD=Consolidator CC - CC Accounts and Types
+editarFechaInicialVGCD=Initial Date - Accounting Groups
+editarFechaFinalVGCD=End Date- Accounting Groups
+editarCodigoVGCD=Code - Accounting Groups
+editaDescripcionVGCD=Description - Accounting Groups
+editarFechaInicialVCTTD=Initial Date - Worker Types
+editarFechaFinalVCTTD=End Date - Worker Types
+editaDescripcionVCTTD=Description - Worker Types
+editarFechaInicialVCTCD=Initial Date - Contract Types
+editarFechaFinalVCTCD=End Date - Contract Types
+editaDescripcionVCTCD=Description - Contract Types
+editarFechaInicialVCRLD=Initial Date - Wage Types
+editarFechaFinalVCRLD=End Date - Wage Types
+editaDescripcionVCRLD=Description - Wage Types
+editarFechaInicialFCD=Initial Date - Formulas
+editarFechaFinalFCD=End Date - Formulas
+editaFormulaFCD=Formula Name
+editaOrdenFCD=Settlement Order
+#Exportar
+fechainicialX=Initial Date
+fechainicialXX=Initial_Date
+fechafinalX=End Date
+fechafinalXX=End_Date
+tipoccX=CC Type
+tipoccXX=CC_Type
+debitoX=Debit
+descripcionX=Description
+ccconsolidadorX=Consolidator CC
+ccconsolidadorXX=Consolidator_CC
+creditoX=Credit
+creditoXX=Credit
+descripcionX=Description
+ccconsolidadorX=Consolidator CC
+ccconsolidadorXX=Consolidator_CC
+codigoX=Code
+descripciongrupoX=Group Description
+descripciongrupoXX=Group_Description
+descripciontipotrabajadorX=Worker Type Description
+descripciontipotrabajadorXX=Worker_Type_Description
+descripciontipocontratoX=Contract Type Description
+descripciontipocontratoXX=Contract_Type_Description
+descripciontiposalarioX=Wage Type Description
+descripciontiposalarioXX=Wage_Type_Description
+nombreformulaX=Formula Name
+nombreformulaXX=Formula_Name
+ordendeliquidacionX=Settlement Order
+ordendeliquidacionXX=Settlement_Order
+#Otros
+vacio=No results were found for this search 
+lovvacio=No results containing the search criteria were found
+si=Yes
+no=No
+limpiar=Clean
+agregar=Add
+cancelar=Cancel
+atencion=WARNING...!
+aceptar=Accept
+atras=Back
+validacionNuevo= To insert a new unsafe act it's necessary to add:
+cambiosRealizados=Do you want to save changes?
+cambio=There are some unsaved changes, do you want to save them?
+refrescar= Refresh
+salir=Exit
