PC PROYECTO01  22-01-2014 >> WAR

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral_en.properties
@@ -103,3 +103,7 @@ activo=ACTIVE
 pensionado=PENSIONER
 retirado=RETIRED
 reportesR=Reports
+infoReporteCodigoD=Report Code
+infoReporteNombreD=Report Name
+errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
+errorFechas=The date until is less than date since.
