PC PROYECTO01  24-01-2014 >> WAR

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar_en.properties
@@ -88,3 +88,7 @@ csv=CSV
 txt=TXT
 reportesR=Reports
 titulo=Predefined Reports - Welfare
+infoReporteCodigoD=Report Code
+infoReporteNombreD=Report Name
+errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
+errorFechas=The date until is less than date since.
