--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
@@ -157,3 +157,7 @@ cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 reportesR=Reports
+infoReporteCodigoD=Report Code
+infoReporteNombreD=Report Name
+errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
+errorFechas=The date until is less than date since.
