--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal_en.properties
@@ -170,3 +170,7 @@ xlsx=XLSX
 csv=CSV
 docx=DOCX
 reportesR=Reports
+infoReporteCodigoD=Report Code
+infoReporteNombreD=Report Name
+errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
+errorFechas=The date until is less than date since.
