--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos_en.properties
@@ -106,3 +106,7 @@ cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 ahorros=SAVINGS
 corriente=CHECKING
+infoReporteCodigoD=Report Code
+infoReporteNombreD=Report Name
+errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until  are obligatory.
+errorFechas=The date until is less than date since.
