PC PROYECTO01  03-02-2014 >> EJB

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato_en.properties
@@ -96,7 +96,7 @@ horasLaboralesXX=Office_Hours
 forzaCotizacionX=Force Module Contribution
 forzaCotizacionXX=Force_Module_Contribution
 forzaNTC=Force Module Contribution: 
-tipoContratoD=Currant Contract Types to Take As References
+tipoContratoD=Current Contract Types to Take As References
 buscarTC=Search Contract Type: 
 clonar=Clone
 nombreBClonarTC=Original Contrac Type Name
