--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proverbio_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proverbio_en.properties
@@ -82,3 +82,20 @@ errorTablaConRastroNF=The table does not exist in RASTROSTABLAS but it has assoc
 errorTablaSinRastroNF=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistroNF=Please choose an entry.
 errorObjetosDBNF=The table 'RECORDATORIOS' hasn't been found ObjetosDB. Please get in touch with support
+#Todos 
+todoslosanos=EVERY YEAR
+todoslosmeses=EVERY MONTH
+todoslosdias=EVERY DAY
+#Meses
+enero=JANUARY
+febrero=FEBRUARY
+marzo=MARCH
+abril=APRIL
+mayo=MAY
+junio=JUNE
+julio=JULY
+agosto=AUGUST
+septiembre=SEPTEMBER
+octubre=OCTOBER
+noviembre=NOVEMBER
+diciembre=DECEMBER
