PROYECTO01 PC - WAR >> 14/02/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato_en.properties
@@ -108,3 +108,5 @@ headerVE=Entailment with Company
 headerForza=Force Module Contribution
 headerHL=Office Hours
 errorCodigoClonado=The new code exists
+duplicarregistroDL=Duplicate Special Working Days Entry
+duplicarregistroTC=Duplicate Contracts Types Entry
