--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/operando_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/operando_en.properties
@@ -22,11 +22,11 @@ nuevo=New Entry
 eliminar=Erase Entry
 duplicar=Duplicate Entry
 rastro=Trace
-si=
-no=
-limpiar=
-agregar=
-cancelar=
+si=Yes
+no=No
+limpiar=Clean
+agregar=Add 
+cancelar=Cancel
 editarNombres=Names
 editarValor=Constant Value
 editarDescripciones=Description
