--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/operando_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/operando_en.properties
@@ -7,8 +7,8 @@ nombre=Name
 tipo=Type
 valorconstante=Constant Value
 descripcion=Description
-actualizable=the operand is updateable on updating batches sent by the supplier (Y/N)
-codigo=Codigo
+actualizable=The operand is updateable on updating batches sent by the supplier (Y/N)
+codigo=Code
 identificacion=Identify if the operand is recalculated when the settlement takes place
 cambioanual=Anual Change (Y/N)
 guardar=Save
@@ -83,4 +83,4 @@ formula=FORMULA
 bloque=PL/SQL BLOCK
 constante=CONSTANT
 funcion=FUNCTION
-relacion=RELATION
+relacion=RELATIONAL
