PROYECTO01 PC - WAR>> 24/02/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo_en.properties
@@ -152,3 +152,4 @@ editarDescripcionTipoDetalleD=Description - Position Properties
 editarEnfoqueTipoDetalleD=Approach - Position Properties
 errorDescripcionTipoDetalle=The field Description cannot be bigger than 40 characteres.
 ingresoNuevoDetalleCargo=\u00bfDo you want to create an entry on position detail?
+errorBorradoCargo=To erase the entry it's necessary for the entry Position Details to be empty.
