--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/dependenciaoperando_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/dependenciaoperando_en.properties
@@ -1,6 +1,11 @@
-titulo=Dependent Operands
-operandos=Recalculated operands for each employee
-nombre=Name
+#Titulo y Fieldsets
+titulo=Dependent Operants
+dependencia=Dependency
+#Tabla de Operandos
+codigo=Code
+nombre=Dependent Name
+consecutivo=Consecutive
+#Toolbar
 guardar=Save
 editar=Edit
 lista=List of Values
@@ -12,14 +17,6 @@ nuevo=New Entry
 eliminar=Erase Entry
 duplicar=Duplicate Entry
 rastro=Trace
-operandosO=Operands
-buscarO=Search Operand: 
-nombreO=Name
-nuevoregistro=New Entry
-ingresarnuevo=Add new Entry
-nombreN=Name: 
-duplicarregistro=Duplicate Entry
-nombreX=Name
 #Otros
 vacio=No results were found for this search 
 lovvacio=No results containing the search criteria were found
@@ -36,12 +33,33 @@ cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar=Refresh
 #RASTRO
-confirmarRastro=The table 'NOVEDADESOPERANDOS' has traces for the selected entry, do you wish to continue?
-confirmarRastroHistorico=The table 'NOVEDADESOPERANDOS' has historic traces,do you wish to continue?
+confirmarRastro=The table 'DEPENDENCIASOPERANDOS' has traces for the selected entry, do you wish to continue?
+confirmarRastroHistorico=The table 'DEPENDENCIASOPERANDOS' has historic traces,do you wish to continue?
 errorRastroHistorico=The table has no historic traces.
 errorRegistroRastro=The selected entry has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
-errorObjetosDB=The table 'NOVEDADESOPERANDOS' hasn't been found ObjetosDB. Please get in touch with support
+errorObjetosDB=The table 'DEPENDENCIASOPERANDOS' hasn't been found ObjetosDB. Please get in touch with support
 editarOperandos=Operand
+#Editar
+editarCodigos=Codes
+editarConsecutivos=Consecutives
+#LOV OPERANDO
+operandosO=Operands
+buscarO=Search Operand: 
+codigoO=Code
+nombreO=Name
+descripcionO=Description
+#Nuevo Registro
+nuevoregistro=New Entry
+ingresarnuevo=Add new Entry
+codigoN=Code: 
+nombreN=Name: 
+consecutivoN=Consecutives: 
+#Duplicar Registro
+duplicarregistro=Duplicate Entry
+#Exportar
+codigoX=Code
+nombreX=Name
+consecutivoX=Consecutive
