--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipobloque_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipobloque_en.properties
@@ -59,3 +59,4 @@ validacionNuevo=To insert a new block type it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar=Refresh
+dependencia=Dependence...
