--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadoperando_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadoperando_en.properties
@@ -45,3 +45,4 @@ errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associa
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'NOVEDADESOPERANDOS' hasn't been found ObjetosDB. Please get in touch with support
 editarOperandos=Operand
+operandorecalculado=The recalculated operand already exists.
