--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto_en.properties
@@ -142,3 +142,4 @@ nombreterceroX=Supplier
 estadoX=State
 enviaraX=Send_Treasury
 codigoalternativoX=Alternative_Code
+detalle=Selected concept details
