--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipoformula_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipoformula_en.properties
@@ -61,3 +61,4 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'TIPOSFORMULAS' hasn't been found ObjetosDB. Please get in touch with support
+dirigirFormula=Formula
