PROYECTO01 PC - WAR>> 03/03/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cargo_en.properties
@@ -153,3 +153,7 @@ editarEnfoqueTipoDetalleD=Approach - Position Properties
 errorDescripcionTipoDetalle=The field Description cannot be bigger than 40 characteres.
 ingresoNuevoDetalleCargo=\u00bfDo you want to create an entry on position detail?
 errorBorradoCargo=To erase the entry it's necessary for the entry Position Details to be empty.
+buscarCargo=Search Position
+mostrarTodos=Show All
+buscarCargoD=Positions
+buscarBC=Search Position: 
