PROYECTO01 PC - WAR>> 17/03/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proceso_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proceso_en.properties
@@ -136,3 +136,5 @@ baseClonado=Name and Code Original Process
 operandoGC=GC Operand
 errorCodigoClon=The New Process Code it's already registered on another process
 errorDatosClonado=Base and New Process names and codes are mandatory
+operandoX=Operand
+procesoClonar=Clone Process
