--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadembargo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadembargo_en.properties
@@ -23,8 +23,10 @@ duplicar=Duplicate Entry
 rastro=Trace
 #Tabla de Embargos
 tipoembargo=Seizure Type
-numerooficio=Office Number/Name
+numerooficio=Office #/N
+numerooficio=Office Numeber/Name
 fechaoficio=Office Date
+numeroproceso=P. #
 numeroproceso=Process Number
 juzgado=Tribunal
 motivoembargo=Seizure Cause
@@ -32,10 +34,10 @@ demandante=Complainant
 nit=N.I.T
 descuento=Discount with destination to suppliers
 valortotal=Total Value
-fechainicialdescuento=Discount Initial Date
+fechainicialdescuento=Disc. I. Date
 formadescuento=Way of Discount
 cancelaciondocumento=Document Cancellation
-fechacancelacion=Cancellation Date
+fechacancelacion=Cancel. Date
 observaciones=Observations
 #Tabla Detalles Embargos
 pagoscomprometidos=Committed Payment
