--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante_en.properties
@@ -39,7 +39,7 @@ cancelar=Cancel
 atencion=WARNING...!
 aceptar=Accept
 atras=Back
-validacionNuevo=To insert a new entry it's necessary to add:
+validacionNuevo=The initial date and end date are mandatory fields
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar=Refresh
@@ -76,4 +76,7 @@ deseadoXX=Desired_Value
 tarifadeseoX=Desired Fee
 tarifadeseoXX=Desired_Fee
 #Fecha Nula
+fechas=Fields Initial date and end date do not match. Please, make sure the end date is after the initial date
+traslapamiento=Dates are superimposing each other. Please, make sure the dates are correct
+errorFechas=Field Initial Date or End Date are null
 fechanula=For the list of values to be displayer, it's necessary for the end date to not be null
