--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/declarante_en.properties
@@ -51,8 +51,8 @@ editarMinima=Minimum Fee
 #Nuevo Registro
 nuevoregistro=New Entry
 ingresarnuevo=Add new Entry
-fechainicioN=Initial Date: 
-fechafinalN=End Date: 
+fechainicioN=*Initial Date: 
+fechafinalN=*End Date: 
 declaranteN=Declarant (Yes/No): 
 deseadoN=$ Desired: 
 tarifadeseoN=Desired Fee: 
