--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
@@ -161,3 +161,8 @@ infoReporteCodigoD=Report Code
 infoReporteNombreD=Report Name
 errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
 errorFechas=The date until is less than date since.
+informacion=Information
+generandoReporte=Generating report, this may take a few minutes...
+mensajeExitoReporte=Report generated successfully.
+descargar=Download
+errorReporte=Error generating report.
