PC PROYECTO01 --> WAR 14/04/2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
@@ -269,3 +269,17 @@ editarFechaFinalModJornadaLaboral=Final Date - Working Day
 editarMotivoModFechaRetiro=Motive - Retirement Date
 editarFechaInicialModFechaRetiro=Initial Date - Retirement Date
 editarFechaFinalModFechaRetiro=Final Date - Retirement Date
+columnaEscenarioD=Details Columns
+buscarCE=Search Column: 
+nuevaColumna=New Column
+nombreColumna=Column Name: 
+buscar=[ Search ]
+detalle=[ Detail ]
+textDetalles=Add more columns detail search
+textEjecutar=Execute Search
+resultadoBusqueda=Search Result
+errorNewColumna=No more columns can be added, the limit is 10.
+configuracionDetalle=Detail Configuration
+textConfiguracion=Choose the detail columns (additionals) which you want to consult. You'll be able to choose up to 10 fields. When you select  a detail column, the parameters on your reports will be updated to the current system date.
+detallesBusqueda=Details Search
+vacio=No results were found for this search 
