--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/busquedaavanzada_en.properties
@@ -283,3 +283,9 @@ configuracionDetalle=Detail Configuration
 textConfiguracion=Choose the detail columns (additionals) which you want to consult. You'll be able to choose up to 10 fields. When you select  a detail column, the parameters on your reports will be updated to the current system date.
 detallesBusqueda=Details Search
 vacio=No results were found for this search 
+textDetalleConfiguracion=Choose the detail columns (additionals) which you want to consult. You'll be able to choose up to 10 fields. When you select a detail column, the parameters on your reports will be updated to the current system date.
+detalleConfiguracionD=Detail Configuration
+buscarCDE=Search Configuration: 
+campo=Field
+detalleBusqueda=Search Detail
+eliminarColumna=Erase Column
